model mapping and error handling cleanup