@@ -1,9 +1,7 @@
 package cc.kercheval.bccmusic.ws_bccmusic_api.Controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.modelmapper.ModelMapper;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -14,6 +12,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import cc.kercheval.bccmusic.ws_bccmusic_api.Exception.VendorNotFoundException;
 import cc.kercheval.bccmusic.ws_bccmusic_api.Exception.VendorValidationException;
+import cc.kercheval.bccmusic.ws_bccmusic_api.Mapper.VendorMapper;
 import cc.kercheval.bccmusic.ws_bccmusic_api.Model.Vendor;
 import cc.kercheval.bccmusic.ws_bccmusic_api.Service.VendorService;
 import jakarta.validation.Valid;
@@ -28,48 +27,39 @@ import lombok.extern.slf4j.Slf4j;
 public class VendorController {
 	
 	private final VendorService vendorService;
-	private final ModelMapper modelMapper;
+	private final VendorMapper vendorMapper;
 	
 	@GetMapping
 	public List<Vendor> getAllVendors() {
-		
-		List<Vendor> vendors = vendorService.getAllVendors()
+		return vendorService.getAllVendors()
 				.stream()
-				.map(e ->
-					modelMapper.map(e, Vendor.class))
-				.collect(Collectors.toList());
-		
-		return vendors;
+				.map(vendorMapper::toDto)
+				.toList();
 	}
 	
 	@GetMapping(value = "/{vendorId}")
 	public Vendor getVendor(@PathVariable Long vendorId) throws VendorNotFoundException {
-		return modelMapper.map(vendorService.getVendorById(vendorId), Vendor.class);		
+		return vendorMapper.toDto(vendorService.getVendorById(vendorId));
 	}
 	
 	@GetMapping(value = "/search")
 	public List<Vendor> searchVendor(@RequestBody @NotBlank String vendorSearch) {
-		
-		List<Vendor> vendors = vendorService.searchVendor(vendorSearch)
+		return vendorService.searchVendor(vendorSearch)
 				.stream()
-				.map(e ->
-					modelMapper.map(e, Vendor.class))
-				.collect(Collectors.toList());
-		
-		return vendors;
+				.map(vendorMapper::toDto)
+				.toList();
 	}
 
 	@PostMapping
 	public Vendor createNewVendor(@Valid @RequestBody Vendor newVendor) throws VendorValidationException {
 		log.info("Creating New Vendor: {}", newVendor.getVendorName());
-		cc.kercheval.bccmusic.ws_bccmusic_api.Entity.Vendor newVendorEntity = modelMapper.map(newVendor, cc.kercheval.bccmusic.ws_bccmusic_api.Entity.Vendor.class);
-		return modelMapper.map(vendorService.createVendor(newVendorEntity), Vendor.class);
+		cc.kercheval.bccmusic.ws_bccmusic_api.Entity.Vendor newVendorEntity = vendorMapper.toEntity(newVendor);
+		return vendorMapper.toDto(vendorService.createVendor(newVendorEntity));
 	}
 	
 	@PutMapping
 	public Vendor updateVendor(@Valid @RequestBody Vendor updatedVendor) throws VendorValidationException, VendorNotFoundException {
-		cc.kercheval.bccmusic.ws_bccmusic_api.Entity.Vendor updatedVendorEntity = modelMapper.map(updatedVendor, cc.kercheval.bccmusic.ws_bccmusic_api.Entity.Vendor.class);
-		return modelMapper.map(vendorService.updateVendor(updatedVendorEntity), Vendor.class);
+		cc.kercheval.bccmusic.ws_bccmusic_api.Entity.Vendor updatedVendorEntity = vendorMapper.toEntity(updatedVendor);
+		return vendorMapper.toDto(vendorService.updateVendor(updatedVendorEntity));
 	}
-
 }
